<resources>
    <string name="app_name">sipelas</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Daftar</string>
    <string name="id">Nomor ID</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="telp">Nomor Telepon</string>
    <string name="status">Status</string>
    <string name="registrasi">Registrasi</string>
    <string name="dashboard">Dashboard</string>
    <string name="data_user">Data User</string>
    <string name="pinjam">Peminjaman</string>
    <string name="profil">Profil</string>
    <string name="data_jadwal">Data Jadwal</string>
    <string name="data_pinjam">Data Pinjam</string>
    <string name="kelas">Kelas</string>
    <string name="mata_kuliah">Mata Kuliah</string>
    <string name="tanggal">Tanggal</string>
    <string name="alasan">Alasan</string>
    <string name="jam">Jam Pinjam - Selesai</string>
    <string name="jam_pinjam">Jam Pinjam</string>
    <string name="jam_selesai">Jam Selesai</string>
    <string name="ruang">Ruangan</string>
    <string name="uid">UID</string>
    <string name="logout">Logout</string>

    <string name="user_item"></string>
    <string name="keterangan">Keterangan</string>
    <string name="sks">SKS</string>
    <string name="cari">Cari</string>
    <string name="detail_pinjam">Detail Peminjaman</string>
    <string name="terima">Terima</string>
    <string name="tolak">Tolak</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="data_ruang">Data Ruang</string>
    <string name="hari">Hari</string>
    <string name="input_ruangan">Input Ruangan</string>
    <string-array name="status_user">
        <item>Administrator</item>
        <item>Mahasiswa</item>
    </string-array>
    <string-array name="status_ruang">
        <item>Tetap</item>
        <item>Sementara</item>
    </string-array>
    <string-array name="hari">
        <item>senin</item>
        <item>selasa</item>
        <item>rabu</item>
        <item>kamis</item>
        <item>jumat</item>
    </string-array>
    <string-array name="ruang">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <string-array name="jam">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="matkul">
        <item>matematika dasar</item>
        <item>pemrograman web dasar</item>
        <item>basis data</item>
        <item>pemrograman android (java)</item>
        <item>pemrograman android (kotlin)</item>
        <item>pemrograman web lanjutan</item>
        <item>bahasa inggris</item>
        <item>implementasi analisis SI</item>
        <item>implementasi web programming</item>
        <item>kewarganegaraan</item>
    </string-array>
</resources>
