<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_matkul"
        android:layout_marginBottom="10dp"
        android:text="@string/mata_kuliah"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tanggal"
        android:layout_marginBottom="10dp"
        android:text="@string/tanggal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_ruang"
        android:layout_marginBottom="10dp"
        android:text="@string/ruang" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_status"
        android:layout_marginBottom="10dp"
        android:text="@string/status" />

</LinearLayout>