<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:text="@string/dashboard"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="150dp"
            android:textAlignment="center" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_jadwal"
            android:text="@string/data_jadwal"
            android:layout_marginTop="30dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_pinjam"
            android:text="@string/pinjam"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_notif"
            android:text="@string/notifikasi"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_profil"
            android:text="@string/profil"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

</ScrollView>