<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:background="@drawable/gradient3"
    android:layout_marginBottom="10dp"
    android:padding="16dp">

    <TextView
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_nama"
        android:layout_marginBottom="10dp"
        android:text="@string/nama"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tanggal"
        android:layout_marginBottom="10dp"
        android:text="@string/tanggal" />

    <TextView
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_ruang"
        android:layout_marginBottom="10dp"
        android:text="@string/ruang" />

    <TextView
        android:textColor="@android:color/holo_red_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_status"
        android:layout_marginBottom="10dp"
        android:text="@string/status" />

</LinearLayout>