<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_class_black_24dp"
            android:layout_marginTop="100dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:textColor="@color/white"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="300dp"
            android:textColor="@color/white"
            android:background="@drawable/button1"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            android:onClick="bt_login"
            android:text="@string/login"
            android:layout_marginTop="30dp" />

        <Button
            android:background="@drawable/button1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_signup"
            android:onClick="bt_signup"
            android:text="@string/signup"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_uid"
            android:textAlignment="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/uid"
            android:textColor="#F44336"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</ScrollView>