<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPeminjaman">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:text="@string/detail_pinjam"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id"
            android:text="@string/id"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_id"
            android:textSize="20sp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nama"
            android:text="@string/nama"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_nama"
            android:textSize="20sp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_kelas"
            android:text="@string/kelas"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_kelas"
            android:textSize="20sp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_matkul"
            android:text="@string/mata_kuliah"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_matkul"
            android:textSize="20sp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tanggal"
            android:text="@string/tanggal"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_tanggal"
            android:textSize="20sp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_jamAwal"
                    android:text="@string/jam_pinjam"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_jamAwal"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_jamAkhir"
                    android:text="@string/jam_selesai"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_jamAkhir"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ruang"
            android:text="@string/ruang"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_ruang"
            android:textSize="20sp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_alasan"
            android:text="@string/alasan"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_alasan"
            android:hint="@string/alasan"
            android:lines="4"
            android:maxLines="10"
            android:minLines="2"
            android:scrollbars="vertical"
            android:textSize="14sp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_keterangan"
            android:text="@string/keterangan"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/et_keterangan"
            android:textSize="20sp"
            android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_terima"
            android:text="@string/terima"
            android:layout_marginRight="7dp"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_tolak"
            android:text="@string/tolak"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    </LinearLayout>

</ScrollView>