<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardAdmin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:text="@string/dashboard"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="150dp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/bt_user"
                android:text="@string/data_user"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/bt_pinjam"
                android:text="@string/data_pinjam"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/bt_jadwal"
                android:text="@string/data_jadwal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/bt_profil"
                android:text="@string/profil"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>