<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient1"
    android:layout_height="match_parent"
    tools:context=".Ruangan">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:textColor="@android:color/black"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:text="@string/data_ruang"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:textAlignment="center" />

        <TextView
            android:textColor="@color/darkchoco"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_hari"
            android:text="@string/hari"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp" />

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_hari"
            android:hint="@string/hari"
            android:entries="@array/hari"
            android:layout_marginTop="5dp" />

        <TextView
            android:textColor="@color/darkchoco"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ruang"
            android:text="@string/ruang"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_ruangan"
            android:hint="@string/ruang"
            android:entries="@array/ruang"
            android:layout_marginTop="5dp" />

        <TextView
            android:textColor="@color/darkchoco"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_jam"
            android:text="@string/jam"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_jam"
            android:hint="@string/jam"
            android:entries="@array/jam"
            android:layout_marginTop="5dp" />

        <Button
            android:background="@drawable/button1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_ruang_input"
            android:text="@string/input_ruangan"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>

</ScrollView>